--- a/REST-server-spring/pom.xml
+++ b/REST-server-spring/pom.xml
@@ -9,6 +9,9 @@
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
+    <name>rest-server-spring</name>
+    <description>REST service realization using Spring Boot</description>
+
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
@@ -17,6 +20,9 @@
     </parent>
 
     <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+        <java.version>1.8</java.version>
         <com.fasterxml.jackson-version>2.9.6</com.fasterxml.jackson-version>
         <io.swagger-version>2.9.1</io.swagger-version>
     </properties>
