--- a/REST-server-spring/pom.xml
+++ b/REST-server-spring/pom.xml
@@ -98,6 +98,11 @@
 
         <!--Commons file upload-->
         <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.4</version>
+        </dependency>
+        <dependency>
             <groupId>commons-fileupload</groupId>
             <artifactId>commons-fileupload</artifactId>
             <version>1.2.1</version>
