--- a/REST-server-spring/pom.xml
+++ b/REST-server-spring/pom.xml
@@ -51,6 +51,10 @@
             <artifactId>spring-security-oauth2</artifactId>
             <version>2.3.0.RELEASE</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
 
         <!-- MySQL Driver -->
         <dependency>
