--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>org.sergei</groupId>
     <artifactId>REST_API</artifactId>
-    <version>2.2.0.BUILD-SNAPSHOT</version>
+    <version>2.2.1.RELEASE</version>
     <packaging>pom</packaging>
 
     <name>REST API Service</name>
