--- a/REST-server/src/main/resources/application.yml
+++ b/REST-server/src/main/resources/application.yml
@@ -5,7 +5,7 @@ server:
   ssl:
     enabled: true
     key-store-type: PKCS12
-    key-store: classpath:tls/keystore.p12
+    key-store: REST-server/src/main/resources/tls/keystore.p12
     key-store-password: keyStoreSecret
     key-alias: tomcat
 spring:
