--- a/REST-client/pom.xml
+++ b/REST-client/pom.xml
@@ -12,7 +12,7 @@
     <parent>
         <groupId>org.sergei</groupId>
         <artifactId>REST_API</artifactId>
-        <version>2.3.2-SNAPSHOT</version>
+        <version>2.3.2</version>
     </parent>
 
     <dependencies>
