--- a/REST-server/pom.xml
+++ b/REST-server/pom.xml
@@ -13,7 +13,7 @@
     <parent>
         <groupId>org.sergei</groupId>
         <artifactId>REST_API</artifactId>
-        <version>2.3.2-SNAPSHOT</version>
+        <version>2.3.2</version>
     </parent>
 
     <properties>
